# inspector-agents

./: .gitignore  README.md  alibaba_verdict.json  demo.py  demo_results.json  edit_server.py  inspector-blog.html  pyproject.toml  redteam_loop.py  server.py  walkthrough.html  walkthrough_redteam.html
archive/: README.md  alibaba_demo_data.json  real_laptop_analysis.json  real_laptop_demo_results.json  real_laptop_verdict.json  walkthrough.html  walkthrough_redteam.html
commitments/: schema.md
commitments/examples/: no_frontier_training.yml
data/: vocab.json
gpu-runs/: CLAUDE.md  HANDOFF_HOST2.md  HANDOFF_HOST3.md  PRIVILEGE_TRADEOFFS.md  README.md  followup-adv-tests.md  requirements.txt
inspector/: __init__.py  agent.py  consistency_checks.py  prompts.py
inspector_v2/: __init__.py  infer.py  log_writer.py  model.py  prompts.py  redteam.py  render_results.py  snapshot.py  train.py  verifier.py
logs/: alibaba_adapter.py  bloom_adapter.py  generator.py  real_training.py  schema.md
redteam/: __init__.py  _util.py  drop_context.py  pad_batches.py  relabel_ops.py  split_run.py  swap_dataset_hash.py
verdicts/: p1_adversarial_adv1_eval_with_grad.json  p1_adversarial_adv2_microbatch_train.json  p1_adversarial_adv3_relabeled.json  p1_adversarial_adv4_underreported.json  p1_adversarial_adv5_split_run.json  p1_inference.json  p1_training.json  p2_adversarial_adv4_underreported_t5e+13.json  p2_adversarial_adv5_split_run_t5e+13.json  p2_training_t5e+13.json  p2_training_t5e+14.json
web/: agent.html  frontier-gap.html  index.html  logs.html  snapshot.html
(+32 files in other folders)
